# API-Progetto

./: .gitignore  CMakeLists.txt  README-IT.md  README.md  debug.h  diff.txt  input.txt  main  main.c  massif.out.air_route_array  output.txt  testlong.txt  testlong.txt.result
.github/workflows/: build.yml  cmake-single-platform.yml  tests.yml
src/: main.c
test/: CMakeLists.txt  CmakeLists.txt  edge_cases.txt  example.txt  large.txt  long.txt  movehex_test.cpp  movhex_test.cpp  stress_cache.txt  stress_cache2.txt
test/generatori_testcases/: generator1.txt  generator_mac  solver_mac
testcases/generatori_testcases/: gen1.txt
